--- a/index.html
+++ b/index.html
@@ -54,6 +54,83 @@
             </li>
           </ul>
         </address>
+        <button class="burger-btn" type="button">
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-heroicons-1"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mobile-menu">
+        <div class="container mobile-menu-container">
+          <button class="mobile-menu-close">
+            <svg class="modal--menu-close-logo" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-btn"></use>
+            </svg>
+          </button>
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-menu-list">
+              <li class="mobile-menu-item">
+                <a
+                  class="mobile-menu-link mobile-menu-studio"
+                  href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link" href="">Portfolio</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="menu-address">
+            <ul class="menu-address-list">
+              <li class="menu-address-item">
+                <a class="menu-address-link" href="mailto:info@devstudio.com"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="menu-address-item">
+                <a
+                  class="menu-address-link menu-address-link-black"
+                  href="tel:+110001111111"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="menu-icon-list">
+            <li class="menu-icon-item">
+              <a class="menu-icon-link" href="">
+                <svg class="menu-icon-logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-icon-item">
+              <a class="menu-icon-link" href="">
+                <svg class="menu-icon-logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-icon-item">
+              <a class="menu-icon-link" href="">
+                <svg class="menu-icon-logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-icon-item">
+              <a class="menu-icon-link" href="">
+                <svg class="menu-icon-logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -124,6 +201,10 @@
           <ul class="team-list">
             <li class="team-item">
               <img
+                srcset="
+                  ./images/img-portrait-1.jpg    1x,
+                  ./images/img-portrait-1-2x.jpg 2x
+                "
                 src="./images/img-portrait-1.jpg"
                 width="264"
                 height="260"
@@ -167,6 +248,10 @@
             </li>
             <li class="team-item">
               <img
+                srcset="
+                  ./images/img-portrait-2.jpg    1x,
+                  ./images/img-portrait-2-2x.jpg 2x
+                "
                 src="./images/img-portrait-2.jpg"
                 width="264"
                 height="260"
@@ -210,6 +295,10 @@
             </li>
             <li class="team-item">
               <img
+                srcset="
+                  ./images/img-portrait-3.jpg    1x,
+                  ./images/img-portrait-3-2x.jpg 2x
+                "
                 src="./images/img-portrait-3.jpg"
                 width="264"
                 height="260"
@@ -253,6 +342,10 @@
             </li>
             <li class="team-item">
               <img
+                srcset="
+                  ./images/img-portrait-4.jpg    1x,
+                  ./images/img-portrait-4-2x.jpg 2x
+                "
                 src="./images/img-portrait-4.jpg"
                 width="264"
                 height="260"
@@ -303,13 +396,35 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-item-wrap">
-                <img
-                  src="./images/img-portfolio-one.jpg"
-                  width="360"
-                  height="300"
-                  alt="bank-app"
-                  class="portfolio-image"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img-portfolio-1.jpg    1x,
+                      ./images/img-portfolio-1-2x.jpg 2x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img-portfolio-tab-1.jpg    1x,
+                      ./images/img-portfolio-tab-1-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img-portfolio-mob-1.jpg    1x,
+                      ./images/img-portfolio-mob-1-2x.jpg 2x
+                    "
+                    media="(min-width:320px)"
+                  />
+                  <img
+                    src="./images/img-portfolio-1.jpg"
+                    width="360"
+                    alt="bank-app"
+                    class="portfolio-image"
+                  />
+                </picture>
                 <p class="portfolio-item-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -323,13 +438,35 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-item-wrap">
-                <img
-                  src="./images/img-portfolio-two.jpg"
-                  width="360"
-                  height="300"
-                  alt="cashless-payment"
-                  class="portfolio-image"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img-portfolio-2.jpg    1x,
+                      ./images/img-portfolio-2-2x.jpg 2x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img-portfolio-tab-2.jpg    1x,
+                      ./images/img-portfolio-tab-2-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img-portfolio-mob-2.jpg    1x,
+                      ./images/img-portfolio-mob-2-2x.jpg 2x
+                    "
+                    media="(min-width:320px)"
+                  />
+                  <img
+                    src="./images/img-portfolio-2.jpg"
+                    width="360"
+                    alt="cashless-payment"
+                    class="portfolio-image"
+                  />
+                </picture>
                 <p class="portfolio-item-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -343,13 +480,35 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-item-wrap">
-                <img
-                  src="./images/img-portfolio-three.jpg"
-                  width="360"
-                  height="300"
-                  alt="medit-app"
-                  class="portfolio-image"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img-portfolio-3.jpg    1x,
+                      ./images/img-portfolio-3-2x.jpg 2x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img-portfolio-tab-3.jpg    1x,
+                      ./images/img-portfolio-tab-3-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img-portfolio-mob-3.jpg    1x,
+                      ./images/img-portfolio-mob-3-2x.jpg 2x
+                    "
+                    media="(min-width:320px)"
+                  />
+                  <img
+                    src="./images/img-portfolio-3.jpg"
+                    width="360"
+                    alt="medit-app"
+                    class="portfolio-image"
+                  />
+                </picture>
                 <p class="portfolio-item-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -363,13 +522,35 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-item-wrap">
-                <img
-                  src="./images/img-portfolio-four.jpg"
-                  width="360"
-                  height="300"
-                  alt="taxi-service"
-                  class="portfolio-image"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img-portfolio-4.jpg    1x,
+                      ./images/img-portfolio-4-2x.jpg 2x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img-portfolio-tab-4.jpg    1x,
+                      ./images/img-portfolio-tab-4-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img-portfolio-mob-4.jpg    1x,
+                      ./images/img-portfolio-mob-4-2x.jpg 2x
+                    "
+                    media="(min-width:320px)"
+                  />
+                  <img
+                    src="./images/img-portfolio-4.jpg"
+                    width="360"
+                    alt="taxi-service"
+                    class="portfolio-image"
+                  />
+                </picture>
                 <p class="portfolio-item-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -383,13 +564,35 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-item-wrap">
-                <img
-                  src="./images/img-portfolio-five.jpg"
-                  width="360"
-                  height="300"
-                  alt="screen-illustrations"
-                  class="portfolio-image"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img-portfolio-5.jpg    1x,
+                      ./images/img-portfolio-5-2x.jpg 2x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img-portfolio-tab-5.jpg    1x,
+                      ./images/img-portfolio-tab-5-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img-portfolio-mob-5.jpg    1x,
+                      ./images/img-portfolio-mob-5-2x.jpg 2x
+                    "
+                    media="(min-width:320px)"
+                  />
+                  <img
+                    src="./images/img-portfolio-5.jpg"
+                    width="360"
+                    alt="screen-illustrations"
+                    class="portfolio-image"
+                  />
+                </picture>
                 <p class="portfolio-item-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -403,13 +606,35 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-item-wrap">
-                <img
-                  src="./images/img-portfolio-six.jpg"
-                  width="360"
-                  height="300"
-                  alt="online-courses"
-                  class="portfolio-image"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img-portfolio-6.jpg    1x,
+                      ./images/img-portfolio-6-2x.jpg 2x
+                    "
+                    media="(min-width:1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img-portfolio-tab-6.jpg    1x,
+                      ./images/img-portfolio-tab-6-2x.jpg 2x
+                    "
+                    media="(min-width:768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/img-portfolio-mob-6.jpg    1x,
+                      ./images/img-portfolio-mob-6-2x.jpg 2x
+                    "
+                    media="(min-width:320px)"
+                  />
+                  <img
+                    src="./images/img-portfolio-6.jpg"
+                    width="360"
+                    alt="online-courses"
+                    class="portfolio-image"
+                  />
+                </picture>
                 <p class="portfolio-item-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -509,7 +734,7 @@
                 name="user-name"
                 id="user-name"
               />
-              <svg class="modal-icon" width="18" height="24">
+              <svg class="modal-icon" width="12" height="12">
                 <use href="./images/icons.svg#icon-name-1"></use>
               </svg>
             </div>
@@ -523,7 +748,7 @@
                 name="user-tel"
                 id="user-tel"
               />
-              <svg class="modal-icon" width="18" height="24">
+              <svg class="modal-icon" width="13" height="13">
                 <use href="./images/icons.svg#icon-tel-1"></use>
               </svg>
             </div>
@@ -537,7 +762,7 @@
                 name="user-email"
                 id="user-email"
               />
-              <svg class="modal-icon" width="18" height="24">
+              <svg class="modal-icon" width="15" height="12">
                 <use href="./images/icons.svg#icon-email-1"></use>
               </svg>
             </div>
@@ -565,8 +790,10 @@
                   <use href="./images/icons.svg#icon-tick-1"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a class="modal-check-link" href="">Privacy Policy</a>
+              <span class="modal-check-span">
+                I accept the terms and conditions of the
+                <a class="modal-check-link" href="">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <button class="modal-btn" type="submit">Send</button>
